force-app/main/default/objects/JBCXM__GSRelationshipSection__c/JBCXM__GSRelationshipSection__c.object-meta.xml
<CustomObject>
    <label>Relationship Section</label>
    <nameField>
        <label>GSRelationshipSection Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Relationship Sections</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>