force-app/main/default/objects/JBCXM__GSRelationshipSection__c/fields/JBCXM__DefaultFilter__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__DefaultFilter__c</fullName>
    <label>Default Filter</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>