force-app/main/default/objects/JBCXM__GSRelationshipSection__c/fields/JBCXM__InRelationship360__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__InRelationship360__c</fullName>
    <defaultValue>true</defaultValue>
    <label>InRelationship360</label>
    <type>Checkbox</type>
</CustomField>