force-app/main/default/objects/JBCXM__GSRelationshipSection__c/fields/JBCXM__Label__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__Label__c</fullName>
    <label>Label</label>
    <length>120</length>
    <type>Text</type>
</CustomField>